Added pokeapi-http service and refactored other services to use it

--- a/DPDB/src/app/components/nav-bar/nav-bar.component.html
+++ b/DPDB/src/app/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Pokémon Database</a>
+      <a href="#" class="navbar-brand">Dylan's Pokémon Database</a>
     </div>
     <div class="navbar-right">
     <app-pokemon-search-bar></app-pokemon-search-bar>
