Added cache to pokeapi service

--- a/DPDB/src/app/components/pokemon-detail/pokedex-entry-display/pokedex-entry-display.component.html
+++ b/DPDB/src/app/components/pokemon-detail/pokedex-entry-display/pokedex-entry-display.component.html
@@ -6,7 +6,7 @@
             <th>Entry</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="speciesReady()">
         <tr *ngFor="let entry of getEntries()">
             <td>{{ entry.version.name }}</td>
             <td>{{ entry.flavor_text }}</td>
